hosts/nandstorm/k8s/apps/media/httpaceproxy-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: httpaceproxy-content-type
  namespace: media
spec:
  headers:
    customResponseHeaders:
      Content-Type: "application/x-mpegurl; charset=utf-8"
